--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ Thumbs.db
 
 .vscode/
 
-shared-local-isntance.db
+shared-local-instance.db 
 server/dynamodb-local-metadata.json
 shared-local-metadata.json
