--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && npx tsc",
+    "build": "rimraf dist && npx tsc && cpx \"src/seed/data/**/*\" dist/seed/data",
     "start": "npm run build && node dist/index.js",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts",
     "seed": "ts-node src/seed/seedDynamodb.ts"
@@ -15,14 +15,14 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.806.0",
-    "@clerk/express": "^1.4.18",
+    "@clerk/express": "^1.5.0",
     "@types/multer": "^1.4.12",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "dynamoose": "^4.0.4",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
@@ -33,12 +33,13 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.1",
+    "@types/express": "^4.17.22",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.17",
     "@types/pluralize": "^0.0.33",
     "@types/uuid": "^10.0.0",
     "concurrently": "^9.1.2",
+    "cpx": "^1.5.0",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
